--- a/STM32F4/Projects/STM32F4_SWD/STM32F4_SWD.uvprojx
+++ b/STM32F4/Projects/STM32F4_SWD/STM32F4_SWD.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>STM32F4_RCC_PLL_100MHz</OutputName>
+          <OutputName>STM32F4_SWD</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
