--- a/STM32F1/Setup files/STM32F1_UART/STM32F1_UART.uvprojx
+++ b/STM32F1/Setup files/STM32F1_UART/STM32F1_UART.uvprojx
@@ -428,6 +428,11 @@
               <FileType>1</FileType>
               <FilePath>.\Code\src\InitUART.c</FilePath>
             </File>
+            <File>
+              <FileName>InitMCO.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Code\src\InitMCO.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
