--- a/STM32F4/Setup files/STM32F4_RCC_PLL_100MHz/STM32F4_RCC_PLL_100MHz.uvprojx
+++ b/STM32F4/Setup files/STM32F4_RCC_PLL_100MHz/STM32F4_RCC_PLL_100MHz.uvprojx
@@ -413,6 +413,11 @@
               <FileType>1</FileType>
               <FilePath>.\Code\src\InitRCC.c</FilePath>
             </File>
+            <File>
+              <FileName>InitSWD.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Code\src\InitSWD.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
